# scs-aa-indexer

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: release.yaml
api/: Cargo.toml
api/src/: main.rs
api/src/db/: mod.rs
api/src/models/: mod.rs
api/src/routes/: mod.rs
config/: config.toml
indexer/: Cargo.toml
indexer/.sqlx/: query-4db48e64ba38831e9c6965e171632b3b7b58d1b10b0d3a488e7995d8286f0494.json  query-8564f7d19278636b56ab601b2ce8482aee8bcc827bdc0564ded3cc474a799eee.json  query-98fef3137d42084d43c36aa0bf04baaafe844d6542fc8975328d9f7350d60f4c.json
indexer/config/: config.toml
indexer/migrations/: 20250429134811_create_user_operations_table.sql
indexer/src/: app.rs  lib.rs  main.rs
indexer/src/cache/: mod.rs  redis.rs
indexer/src/config/: config.rs
indexer/src/consumer/: kafka_consumer.rs  kakfa_message.rs  mod.rs
indexer/src/events/: events.rs
indexer/src/listener/: listener.rs
indexer/src/model/: event.rs  fund_type.rs  mod.rs  paymaster_mode.rs  paymaster_type.rs  user_op.rs  user_op_policy.rs
indexer/src/processor/: handler.rs  processor.rs
indexer/src/storage/: mod.rs  time_scale.rs
indexer/src/utils/: mod.rs
src/: main.rs
src/config/: config.rs
src/consumer/: kafka_consumer.rs  kakfa_message.rs
src/events/: events.rs
src/listener/: listener.rs  mod.rs
src/processor/: handler.rs  mod.rs  processor.rs
src/storage/: kafka.rs  mod.rs  redis.rs  time_scale.rs
