[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "indexer"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }  # Async runtime
reqwest = { version = "0.11", features = ["json"] } # HTTP requests
serde = { version = "1.0", features = ["derive"] }  # Serialization
dotenv = "0.15" # Environment variables
log = "0.4" # Logging
env_logger = "0.10" # Logger initialization
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "json", "chrono"] } # Database
redis = { version = "0.23", features = ["tokio-comp", "tokio-native-tls-comp"] } # Caching
opensearch = "2.3.0" # OpenSearch indexing
warp = "0.3" # Web API (REST/GraphQL)
async-trait = "0.1" # Async trait for better modularity
eyre = "0.6" # Error handling
toml = "0.7"
kafka = "0.10"

# Correct Alloy dependencies (latest structure)
alloy = { version = "0.11", features = ["full"] }
futures-util = "0.3"   
url = "2.3"
hex-literal = "0.3"
alloy-sol-types = "0.8.22"
derive_more = { version = "1.0.0", features = ["display"] }
rdkafka = {version ="0.37.0", features = ["tokio"]}
serde_json = "1.0.139"
anyhow = "1.0.97"
chrono = "0.4.40"
tracing = "0.1.41"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
